syntax = "proto3";

package protocol;

option go_package = "github.com/besuhoff/dungeon-game-go/internal/protocol";

// Message types
enum MessageType {
  UNKNOWN = 0;
  INPUT = 2;
  GAME_STATE = 5;
  GAME_STATE_DELTA = 11;
  PLAYER_JOIN = 6;
  PLAYER_LEAVE = 7;
  PLAYER_RESPAWN = 8;
  ERROR = 10;
}

// Common structures
message Vector2 {
  double x = 1;
  double y = 2;
}

message InventoryItem {
  int32 type = 1;
  int32 quantity = 2;
}

message Player {
  string id = 1;
  string username = 2;
  Vector2 position = 3;
  Vector2 velocity = 4;
  float lives = 5;
  double invulnerable_timer = 13;
  int32 score = 6;
  int32 money = 7;
  int32 kills = 8;
  double rotation = 9;
  map<string, int32> bullets_left_by_weapon_type = 10;
  double night_vision_timer = 11;
  bool is_alive = 12;
  repeated InventoryItem inventory = 14;
  string selected_gun_type = 15;
}

message Bullet {
  string id = 1;
  Vector2 position = 2;
  Vector2 velocity = 3;
  string owner_id = 4;
  float damage = 5;
  bool is_enemy = 6;
  bool is_active = 7;
  int64 deleted_at = 10;
  int64 inactive_ms = 9;
  string weapon_type = 8;
}

message Wall {
  string id = 1;
  Vector2 position = 2;
  double width = 3;
  double height = 4;
  string orientation = 5;
}

message Enemy {
  string id = 1;
  Vector2 position = 2;
  double rotation = 3;
  float lives = 4;
  string wall_id = 5;
  bool is_alive = 6;
}

message Bonus {
  string id = 1;
  Vector2 position = 2;
  string type = 3;
  string picked_up_by = 4;
  string dropped_by = 5;
}

message ShopItem {
  int32 quantity = 1;
  int32 pack_size = 2;
  int32 price = 3;
}

message Shop {
  string id = 1;
  Vector2 position = 2;
  map<int32, ShopItem> inventory = 3; 
  string name = 4;
}

message InputMessage {
  bool forward = 1;
  bool backward = 2;
  bool left = 3;
  bool right = 4;
  bool shoot = 5;
  map<int32, bool> item_key = 6;
  map<int32, bool> purchase_item_key = 7;
}

message PositionUpdate {
  double x = 1;
  double y = 2;
  double rotation = 3;
}

message TimersUpdate {
  double invulnerable_timer = 1;
  double night_vision_timer = 2;  
}

message LivesUpdate {
  float lives = 1;
  bool is_alive = 2;
} 

message InventoryUpdate {
  repeated InventoryItem inventory = 1;
  string selected_gun_type = 2;
}

message ScoreUpdate {
  int32 score = 1;
  int32 money = 2;
  int32 kills = 3;
}

message PlayerBulletsUpdate {
  map<string, int32> bullets_left_by_weapon_type = 1;
}

message PlayerUpdate {
  PositionUpdate position = 1;
  TimersUpdate timers = 2;
  LivesUpdate lives = 3;
  InventoryUpdate inventory = 4;
  ScoreUpdate score = 5;
  PlayerBulletsUpdate player_bullets = 6;
}

message DeletionUpdate {
  bool is_active = 1;
  int64 deleted_at = 2;
}

message EnemyUpdate {
  PositionUpdate position = 1;
  LivesUpdate lives = 2;
}

message BonusUpdate {
  string picked_up_by = 1;
}

message ShopUpdate {
  map<int32, ShopItem> inventory = 1; 
}

message GameStateDeltaMessage {
  map<string, Player> added_players = 1;
  map<string, PlayerUpdate> updated_players = 2;
  repeated string removed_players = 3;
  
  map<string, Bullet> added_bullets = 4;
  map<string, PositionUpdate> updated_bullets = 5;
  map<string, Bullet> removed_bullets = 6;
  
  map<string, Wall> added_walls = 7;
  repeated string removed_walls = 8;
  
  map<string, Enemy> added_enemies = 9;
  map<string, EnemyUpdate> updated_enemies = 10;
  repeated string removed_enemies = 11;
  
  map<string, Bonus> added_bonuses = 12;
  map<string, BonusUpdate> updated_bonuses = 13;
  repeated string removed_bonuses = 14;

  map<string, Shop> added_shops = 15;
  map<string, ShopUpdate> updated_shops = 16;
  repeated string removed_shops = 17; 

  repeated string added_players_shops = 18;
  repeated string removed_players_shops = 19;

  map<string, Vector2> updated_other_player_positions = 20;
  repeated string removed_other_player_positions = 21;
  
  int64 timestamp = 22;
}

message PlayerJoinMessage {
  Player player = 1;
}

message PlayerLeaveMessage {
  string player_id = 1;
}

message PlayerRespawnMessage {
}

message ErrorMessage {
  string message = 1;
}

// Wrapper message
message GameMessage {
  MessageType type = 1;
  oneof payload {
    InputMessage input = 3;
    GameStateDeltaMessage game_state_delta = 11;
    PlayerJoinMessage player_join = 6;
    PlayerLeaveMessage player_leave = 7;
    PlayerRespawnMessage player_respawn = 8;
    ErrorMessage error = 10;
  }
}
